changed copy for preference button and user news. Added styles for comments hb. fixed footer spacing issue.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,10 +237,6 @@ legend {
     color: white;
 }
 
-.username {
-    color: var(--theme);
-}
-
 /* Separator for comments link on team dashboard */
 .bar {
     background-color: var(--off-theme);
@@ -275,10 +271,37 @@ legend {
 }
 
 .article-post-card {
-    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
-    border-radius: 8px;
-    padding: 12px;
-    height: 85vh;
+    box-shadow: 0px 0px 8px 3px rgba(39, 99, 74, 0.75);
+    background-color: var(--off-black);
+    border: 1px solid var(--off-black);
+    padding: 12px 12px 0px 12px;
+}
+
+.article-post-title {
+    color: var(--theme);
+    
+}
+
+.article-link {
+    font-weight: var(--rubik-light);
+}
+
+.article-post-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 16px;
+}
+
+.comment-link {
+    color: var(--background);
+    margin-top: 14px;
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid hotpink;
 }
 
 .home {
@@ -312,18 +335,6 @@ legend {
 
 /* ------------- LANDING PAGE - END ------------- */
 
-.footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    background-color: var(--off-black);
-    bottom: 0;
-    width: 100%;
-    height: 6.5rem;
-}
-
 .login-title {
     background-color: var(--off-black);
     flex-direction: row;
@@ -349,7 +360,6 @@ legend {
 }
 
 .signup-page-buttons {
-    border: 1px solid red;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -369,17 +379,6 @@ legend {
 .user-dashboard-article {
     background-color: var(--black);
 }
-
-
-/* ------------- MEDIA QUERIES ------------- */
-
-@media screen and (max-width: 760px) {
-    .nav {
-        flex-direction: column;
-    }
-}
-
-/* ------------- ------------- */
 
 .preferences-modal-title {
     background-color: var(--off-black);
@@ -417,10 +416,39 @@ legend {
 }
 
 .post-modal {
-   background-color: var(--black);
+    background-color: var(--black);
 }
 
 .post-modal-title {
     color: var(--theme)
 }
+
+.footer-bar {
+    margin: 16px 0;
+    background-color: var(--off-theme);
+    padding: 0;
+    height: 2px;
+    width: 60%;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--black);
+    width: 100%;
+    height: 6.5rem;
+}
+
+
+/* ------------- MEDIA QUERIES ------------- */
+
+@media screen and (max-width: 760px) {
+    .nav {
+        flex-direction: column;
+    }
+}
+
+/* ------------- ------------- */
 
